# 42-call-me-maybe

./: .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml  test.py  test2.py  test3.py  test_function_selection.py  test_parameter_extraction.py
data/input/: edge_cases_tests.json
data/output/: function_calls.json
src/: __main__.py  constrained_decoder.py  constrained_param_decoder.py  decoder.py  file_handler.py  function_selector.py  functions.py  json_decoder.py  llm_engine.py  loader.py  models.py  parameter_extractor.py  parameter_extractor_constrained.py  pipeline.py  prompt_processor.py  runner.py  schema.py  validator.py
src/data/output/: function_calls.json
src_post_sampling/: README.md  __init__.py  __main__.py
