[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "mypy",
    "flake8",
    "llm-sdk",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm-sdk = { workspace = true }
