[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2,<3",
    "mypy>=1.11.0",
    "flake8>=7.0.0",
    "llm-sdk",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm-sdk = { workspace = true }

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "llm_sdk"
ignore_missing_imports = true
follow_imports = "skip"
